--- a/src/tbp/monty/conf/experiment/zachs_examples/zachs_monty_meets_world.yaml
+++ b/src/tbp/monty/conf/experiment/zachs_examples/zachs_monty_meets_world.yaml
@@ -11,7 +11,7 @@ defaults:
   - /experiment/config/monty/args/defaults@config.monty_config.monty_args
   - /experiment/config/monty/motor_system/clear_motor_system_config@config.monty_config
   # the following config moves 20 pixels at a time (this doesn't work very well when reduced to say 8)
-  - /experiment/config/monty/motor_system/informed_no_trans_step_s20@config.monty_config.motor_system_config
+  - /experiment/config/monty/motor_system/informed_no_trans_step_s8@config.monty_config.motor_system_config
   - /experiment/config/environment/world_image@config.env_interface_config
   - /experiment/config/environment/init_args/clear_env_init_args@config.env_interface_config
   - /experiment/config/environment/init_args/monty_world_standard_scenes@config.env_interface_config.env_init_args
@@ -30,12 +30,11 @@ config:
   logging:
     run_name: my_monty_meets_world
     wandb_group: my_monty_meets_world
-    # monty_handlers:
-    #   - ${monty.class:tbp.monty.frameworks.loggers.monty_handlers.BasicCSVStatsHandler}
-    #   - ${monty.class:tbp.monty.frameworks.loggers.monty_handlers.ReproduceEpisodeHandler}
-    # wandb_handlers:
-    #   - ${monty.class:tbp.monty.frameworks.loggers.wandb_handlers.BasicWandbTableStatsHandler}
-    #   - ${monty.class:tbp.monty.frameworks.loggers.wandb_handlers.BasicWandbChartStatsHandler}
+    monty_handlers:
+      - ${monty.class:tbp.monty.frameworks.loggers.monty_handlers.BasicCSVStatsHandler}
+    wandb_handlers:
+      - ${monty.class:tbp.monty.frameworks.loggers.wandb_handlers.BasicWandbTableStatsHandler}
+      - ${monty.class:tbp.monty.frameworks.loggers.wandb_handlers.BasicWandbChartStatsHandler}
   monty_config:
     monty_args:
       min_eval_steps: ${benchmarks.min_eval_steps}
